--- a/app/views/student_homes/index.html.erb
+++ b/app/views/student_homes/index.html.erb
@@ -15,50 +15,30 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr>
-							<td></td>
-							<td></td>
-							<td></td>
-							<td></td>
-							<td></td>
-							<td></td>
-						</tr>
-					</tbody>
-						<tr>
-							<td></td>
-							<td></td>
-							<td></td>
-							<td></td>
-							<td></td>
-							<td></td>
-						</tr>
-					</tbody>
-						<tr>
-							<td></td>
-							<td></td>
-							<td></td>
-							<td></td>
-							<td></td>
-							<td></td>
-						</tr>
-					</tbody>
-						<tr>
-							<td></td>
-							<td></td>
-							<td></td>
-							<td></td>
-							<td></td>
-							<td></td>
-						</tr>
-					</tbody>
-						<tr>
-							<td></td>
-							<td></td>
-							<td></td>
-							<td></td>
-							<td></td>
-							<td></td>
-						</tr>
+						<% for period in 1..6 do %>
+							<tr>
+								<% for day in 1..6 do %>
+									<% if @student_lectures.empty? %>
+										<td> </td>
+									<% else %>
+										<%  @student_lectures.each do |lecture| %>
+											<% if (lecture.period == period) &&
+													(
+													( lecture.day == "月" && day == 1 ) ||
+													( lecture.day == "火" && day == 2 ) ||
+													( lecture.day == "水" && day == 3 ) ||
+													( lecture.day == "木" && day == 4 ) ||
+													( lecture.day == "金" && day == 5 ) 
+													) %>
+												<td> <% lecture.name %> </td>
+											<% else %>
+												<td> </td>
+											<% end %>
+										<% end %>
+									<% end %>
+								<% end %>
+							</tr>
+						<% end %>
 					</tbody>
 				</table>
 				<div class="row">
