--- a/app/views/teacher_reports/new.html.erb
+++ b/app/views/teacher_reports/new.html.erb
@@ -8,33 +8,34 @@
       <% end %>
   </div>
   <%end%>
-<%= form_for @report, url:'teacher_reports' do |f| %>
+<%= form_for @report, url:'/teacher_reports' do |f| %>
   <div class = 'margin_area'>
     <div class = 'form_area'>
-      <p>講義:#選択形式
+      <p>講義:</p>
+        <p><%= f.select :lecture, @lectures.map{|lecture| lecture.name} ,class:"form-control", prompt: '選択してください。' %>
       </p>
 
-      <p>レポート名(20文字まで):#テキスト形式
-      <%= f.text_field :title, class: 'form-control', maxlength: 20 %></p>
+      <p>レポート名(20文字まで):</p>
+      <p><%= f.text_field :title, maxlength: 20, size:45 %></p>
 
-      <p>締切日時:#選択形式
-      <%= f.date_select :deadline_date, {}, class: 'form-control' %></p>
+      <p>締切日時:</p>
+      <p><%= f.date_select :deadline_date, {} %></p>
 
-      <p>内容(200文字まで):#テキスト形式
-      <%= f.text_field :content, class: 'form-control', maxlength: 200, size: 20 %></p>
+      <p>内容(200文字まで):</p>
+      <p><%= f.text_field :content, maxlength: 200, size: 100 %></p>
 
     </div>
   </div>
 
-  <div class=""container>
+  <div class="container">
     <div class="row">
       <div class="col-md-9">
-        
+
       </div>
       <div class="col-md-3">
         <div class = 'submit'><%= f.submit 'OK', class: 'btn btn-primary', role:'button', data: { confirm: "レポートを登録しますか？"}%></div>
-        <%= button_to "戻る", {controller:'teacher_homes', action:'index'}, {method: :get, class: "btn btn-default"} %>
+        <% end %>
+        <%= button_to "戻る", teacher_homes_path,{method: :get, class: "btn btn-primary"} %>
       </div>
     </div>
   </div>
-<% end %>
