--- a/app/views/teacher_reports/index.html.erb
+++ b/app/views/teacher_reports/index.html.erb
@@ -18,8 +18,8 @@
         <tr>
           <th>どうやって持ってくんのかな</th>
           <th><%= report.title %></th>
-          <th><%= report.deadline_date.(2i) %></th>
-          <th><%= report.deadline_date.(3i) %></th>
+          <th><%#= report.deadline_date.(2i) %></th>
+          <th><%#= report.deadline_date.(3i) %></th>
           <th>削除ボタン
         </tr>
       <% end %>
