--- a/app/views/teacher_reports/index.html.erb
+++ b/app/views/teacher_reports/index.html.erb
@@ -16,7 +16,7 @@
     <tbody>
       <% @reports.each do |report| %>
         <tr>
-          <th>どうやって持ってくんのかな</th>
+          <th><%= report.lecture.name %></th>
           <th><%= report.title %></th>
           <th><%#= report.deadline_date.(2i) %></th>
           <th><%#= report.deadline_date.(3i) %></th>
