Add check of uploaded_file's validation

--- a/app/views/student_homes/index.html.erb
+++ b/app/views/student_homes/index.html.erb
@@ -77,7 +77,7 @@
 					<br>
 					<br>
 					<br>
-					<%= button_to "ログアウト", {controller: 'welcom', action: 'home'}, {method: :get, class: "btn btn-default"}%>
+					<%= button_to "ログアウト", {controller: 'auth', action: 'logout'}, {method: :get, class: "btn btn-default"}%>
 				</div>
 			</div>
 		</div>
