--- a/app/views/layouts/welcom_base.html.erb
+++ b/app/views/layouts/welcom_base.html.erb
@@ -7,7 +7,11 @@
   </head>
 
   <body id = 'welcom'>
-   
+  <% if flash[:notice].present?%>
+  <div class="alert alert-success" role="alert"><%= flash[:notice] %></div>
+  <% elsif flash[:alert].present?%>
+  <div class="alert alert-danger" role="alert"><%= flash[:alert] %></div>
+  <%end%>
     <%= yield %>
   
   </body>
