--- a/app/views/teacher_homes/index.html.erb
+++ b/app/views/teacher_homes/index.html.erb
@@ -75,4 +75,12 @@
       </p>
     </div>
   </div>
+  <div class="row">
+    <div class="col-md-9">
+
+    </div>
+    <div class="col-md-3">
+      <%= button_to "ログアウト", {controller: 'auth', action: 'logout'}, {method: :get, class: "btn btn-primary"}%>
+    </div>
+  </div>
 </div>
