事務員　講義バックアップ　画面変更

--- a/app/views/staff_operate_lectures/backup.html.erb
+++ b/app/views/staff_operate_lectures/backup.html.erb
@@ -3,8 +3,9 @@
 <h3>講義バックアップ:</h3>
 <div class = 'margin_area'>
 <div class = 'form_area'>
+  <p>ボタンをクリック後ダウンロードを開始します。</p>
 <div class = 'backup'>
-  <%= button_to 'バックアップ開始',{action: :download},{class:'btn btn-primary', role:'button'} %>
+  <%= button_to 'ダウンロード開始',{action: :download},{class:'btn btn-primary', role:'button'} %>
 </div>
 <!--end of backup-->
 </div>
