--- a/app/views/teacher_lecture_dates/new.html.erb
+++ b/app/views/teacher_lecture_dates/new.html.erb
@@ -1,21 +1,24 @@
 <h1>開講日変更</h1>
-  <% if @lectures.errors.any? %>
+<% if @lectures.count <= 0%>
+  <h2>担当している講義がありません。</h2>
+<%else%>
+  <% if @date.errors.any? %>
   <div id="error_explanation">
-  <% @lectures.errors.full_messages.each do |msg| %>
+  <% @date.errors.full_messages.each do |msg| %>
       <ul>
         <li><%= msg %></li>
       </ul>
       <% end %>
   </div>
   <%end%>
-<%= form_for @date, url:'teacher_reports' do |f| %>
+<%= form_for @date, url:'/teacher_lecture_dates' do |f| %>
   <div class=container>
     <div class="row">
       <div class="col-md-12">
 
         講義選択:
         <% @lectures.each do |lecture| %>
-          <p><label> <%=f.radio.button :teacher_lecture_id, #teacher_lecture_idを求める %><%= lecture.name %> </label></p>
+          <p><label> <%=f.radio_button :lecture, lecture.name %><%= lecture.name %> </label></p>
         <%end%>
       </div>
     </div>
@@ -23,10 +26,10 @@
       <div class="col-md-12">
         <p>開講日設定:</p>
 
-        <p><%= f.select :cancel_or_suppliment, [["休講", "?"], ["補講", "?"]], class: 'form-control', prompt: '選択してください。' %></p>
+        <p><%= f.select :cancel_date_previous_change, [["休講", "休講"], ["補講", "補講"]], class: 'form-control', prompt: '選択してください。' %></p>
 
         <p><%= f.label :"日付" %><br>
-          <%= f.date_select :deadline_date, {}, class: 'form-control' %></p>
+          <p><%= f.text_field :cancel_date, id: 'datepicker' %></p>
 
         <p> <%= f.label :"時限" %><br>
         <%= f.select :period, [["1", "1"], ["2", "2"], ["3", "3"], ["4", "4"], ["5", "5"], ["6", "6"], ["7", "7"]], class: "form-control", prompt: '選択してください。'  %>
@@ -38,9 +41,17 @@
 
       </div>
       <div class="col-md-3">
-        <%= button_to "OK" %>
+        <div class = 'submit'><%= f.submit 'OK', class: 'btn btn-primary', role:'button', data: { confirm: "開講日変更を登録しますか？"}%></div>
         <%end%>
         <%= button_to "戻る", {controller: 'teacher_homes', action: 'index'}, {method: :get, class: "btn btn-primary"} %>
       </div>
     </div>
   </div>
+  <%end%>
+
+  <script type = 'text/javascript'>
+    $("#datepicker").datepicker({
+      minDate: 0
+    });
+
+  </script>
