Add error check of student_lectures

--- a/app/views/student_lectures/complete.html.erb
+++ b/app/views/student_lectures/complete.html.erb
@@ -1,5 +1,11 @@
 <h1>Student's page </h1>
 <p>
-	講義の登録が完了しました
-	<%= button_to "戻る", {controller: 'student_homes', action: 'index'}, {method: :get, class: "btn btn-default"}%>
+	<% if @error %>
+		エラーが発生しました<br>
+		もう一度やり直してください
+		<%= button_to "戻る", {controller: 'student_lectures', action: 'new'}, {method: :get, class: "btn btn-default"}%>		
+	<% else %>
+		講義の登録が完了しました
+		<%= button_to "戻る", {controller: 'student_homes', action: 'index'}, {method: :get, class: "btn btn-default"}%>
+	<% end %>
 </p>
