ログインエラー時の画面のレイアウト修正

--- a/app/views/auth/login_error.html.erb
+++ b/app/views/auth/login_error.html.erb
@@ -1,3 +1,12 @@
-<p>本システムに登録されていないメールアドレスです。</p>
+<div class = "error_all_margin_arrea">
+<div class = "error_margin_area">
+<div class = "error_form_area">
+<p>本システムに登録されていない</p>
+<p>メールアドレスです。</p>
 <p>管理者に問い合わせください</p>
-<%= link_to 'TOP', '../welcom/home' %>
+</div>
+</div>
+<p class = "error_exit_link">
+<%= link_to 'EXIT', '../welcom/home' %>
+</p>
+</div>
