管理者ログアウトのエラー修正

--- a/app/views/welcom/home.html.erb
+++ b/app/views/welcom/home.html.erb
@@ -32,7 +32,7 @@
 </p>
 
 <p class = "admin_enter">
-    <%= link_to "管理者用入り口","/admin_homes"  %>
+    <%= link_to "管理者用入り口",admin_homes_path  %>
 
 </p>
 </div>
