メールテンプレートの修正

--- a/app/views/send_email_mailer/lecture_date.html.erb
+++ b/app/views/send_email_mailer/lecture_date.html.erb
@@ -14,7 +14,7 @@
 <br>
 ■日時<br>
 <br>
-日時：<%=@date%> <%=@period%><br>
+日時：<%=@date%> <%=@period%>限<br>
 <br>
 <br>
 -------------------------------------------<br>
