教員編集機能を追加

--- a/app/views/admin_operate_teachers/edit.html.erb
+++ b/app/views/admin_operate_teachers/edit.html.erb
@@ -1,2 +1,31 @@
-<h1>AdminOperateTeachers#edit</h1>
-<p>Find me in app/views/admin_operate_teachers/edit.html.erb</p>
+<%= form_for @teacher, url: {action: :update} do |f| %>
+<h1>教員の登録</h1>
+
+<% if @teacher.errors.any? %>
+<div>
+    <% @teacher.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+    <% end %>
+</div>
+<% end%>
+
+<div>
+    <%= f.label "メールアドレス" %><br />
+    <%= f.text_field :email %>
+</div>
+
+<div>
+    <%= f.label "教員名" %><br />
+    <%= f.text_field :name %>
+</div>
+
+<br />
+<div class="form-inline">
+    <div>
+        <%= f.submit "OK", class: "btn btn-outline-secondary"%>
+    </div>
+    <div style="padding-left:50px">
+        <%= link_to "戻る", admin_operate_teachers_url, class: "btn btn-outline-secondary"%>        
+    </div>
+</div>
+<% end %>
