--- a/app/views/admin_operate_teachers/index.html.erb
+++ b/app/views/admin_operate_teachers/index.html.erb
@@ -4,6 +4,7 @@
         <tr>
             <th>教員名</th>
             <th>メールアドレス</th>
+            <th>編集</th>
             <th>削除</th>
         </tr>
     </thead>
@@ -12,6 +13,7 @@
         <tr>
             <td><%= t.name %></td>
             <td><%= t.email %></td>
+            <td><%= link_to 'Edit', edit_admin_operate_teacher_path(t.id), class: "btn btn-success"%></td>
             <td><%= link_to 'Destroy', admin_operate_teacher_path(t.id), method: :delete, class: "btn btn-danger"%></td>
         </tr>
         <% end %>
