--- a/app/views/student_homes/index.html.erb
+++ b/app/views/student_homes/index.html.erb
@@ -1,4 +1,5 @@
 ﻿<h1>Student's Home Page</h1>
+ようこそ <%= @student_email %> さん
 <p>
 	<div class="container">
 		<div class="row">
@@ -18,6 +19,7 @@
 						<% for period in 1..7 do %>
 							<tr>
 								<% for day in 1..6 do %>
+									<% found = false %>
 									<% if @student_lectures.empty? %>
 										<td> </td>
 									<% else %>
@@ -31,10 +33,12 @@
 													( lecture.day == "金" && day == 5 ) ||
 													( lecture.day == "土" && day == 6 ) 
 													) %>
+												<% found = true %>
 												<td> <%= lecture.name %> </td>
-											<% else %>
-												<td> </td>
 											<% end %>
+										<% end %>
+										<% if found == false %>
+											<td></td>
 										<% end %>
 									<% end %>
 								<% end %>
